Small changes to NAT3D after the Windows porting code. Majority of things broken are header files, datatypes etc

--- a/branch/tdsmapper/nat3/src/Makefile
+++ b/branch/tdsmapper/nat3/src/Makefile
@@ -1,11 +1,11 @@
 
 CC =    gcc
 CXX =    g++
-CFLAGS =  -g  -DHAVE_CONFIG_H -D_TUN_MGR_DEBUG -DNAT3_TAP
+CFLAGS =  -g -O2  -DHAVE_CONFIG_H
 LDFLAGS =  -lpthread 
 DEFINES = -D_POSIX_THREADS -DHAVE_CONFIG_H
 DNS = dns_a.o dns_compression.o dns_header.o dns_name.o dns_nat3.o dns_packet.o dns_query.o dns_rr.o
-OBJS = $(DNS) tun_mgr.o tun_device.o tun_queue.o resolver.o tun_in_ent.o tun_out_ent.o tun_ent.o mutex_helper.o config_file.o 
+OBJS = $(DNS) tun_mgr.o tun_device.o tun_queue.o resolver.o tun_in_ent.o tun_out_ent.o tun_ent.o mutex_helper.o config_file.o linux_tun_mgr.o
 
 TEST_DRIVERS = test_tun_mgr 
 PROG = nat3d nat3ping
