Small linux port issues mostly done.

--- a/branch/tdsmapper/nat3/Nat3Win.vcproj
+++ b/branch/tdsmapper/nat3/Nat3Win.vcproj
@@ -324,6 +324,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\functions.cc"
+				>
+			</File>
+			<File
 				RelativePath=".\src\linux_tun_mgr.cc"
 				>
 			</File>
