Makefile never getting updated. Trying again :-

--- a/branch/tdsmapper/nat3/src/Makefile
+++ b/branch/tdsmapper/nat3/src/Makefile
@@ -4,13 +4,13 @@ CXX =    g++
 CFLAGS =  -g -O2  -DHAVE_CONFIG_H
 LDFLAGS =  -lpthread 
 DEFINES = -D_POSIX_THREADS -DHAVE_CONFIG_H
-DNS = dns_a.o dns_compression.o dns_header.o dns_name.o dns_nat3.o dns_packet.o dns_query.o dns_rr.o 
-OBJS = $(DNS) tun_mgr.o tun_device.o tun_queue.o resolver.o tun_in_ent.o tun_out_ent.o tun_ent.o mutex_helper.o config_file.o linux_tun_mgr.o functions.o
+DNS = dns_a.o dns_compression.o dns_header.o dns_name.o dns_nat3.o dns_packet.o dns_query.o dns_rr.o
+OBJS = $(DNS) tun_mgr.o tun_device.o tun_queue.o resolver.o tun_in_ent.o tun_out_ent.o tun_ent.o mutex_helper.o config_file.o functions.o linux_tun_mgr.o
 
 TEST_DRIVERS = test_tun_mgr 
 PROG = nat3d nat3ping
 
-CFLAGS += -Wall -Werror -D_REENTRANT -DNAT3_TAP
+CFLAGS += -Wall -Werror -D_REENTRANT
 CFLAGS += -DDEBUG -g
 
 CXXFLAGS += $(CFLAGS)
