--- a/branch/tdsmapper/nat3/Nat3Win.vcproj
+++ b/branch/tdsmapper/nat3/Nat3Win.vcproj
@@ -45,6 +45,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="WpdPack\Include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -65,9 +66,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib Iphlpapi.lib User32.lib"
+				AdditionalDependencies="ws2_32.lib Iphlpapi.lib User32.lib wpcap.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories=""
+				AdditionalLibraryDirectories="WpdPack\Lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -240,6 +241,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\pcap_arp_handler.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\resolver.h"
 				>
 			</File>
@@ -341,6 +346,10 @@
 			</File>
 			<File
 				RelativePath=".\src\p_thread.cc"
+				>
+			</File>
+			<File
+				RelativePath=".\src\pcap_arp_handler.cc"
 				>
 			</File>
 			<File
