Major changes with this commit:
1. Code works on Linux.
2. Forgot to add pcap arp handlers in last revision
3. The network/host order of uint32_t holding network address/netmasks is standardized to host order.
4. Autoconf file configure.in changed to reflect requirement of pcap to be installed (is this required for client?).

--- a/branch/tdsmapper/nat3/Makefile
+++ b/branch/tdsmapper/nat3/Makefile
@@ -7,7 +7,7 @@ LDFLAGS =
 DEFINES = -DHAVE_CONFIG_H
 
 CFLAGS += -Wall -Werror -D_REENTRANT
-CFLAGS += -DDEBUG -g
+CFLAGS += -g
 
 CXXFLAGS += $(CFLAGS)
 
