--- a/branch/tdsmapper/nat3/src/Makefile.in
+++ b/branch/tdsmapper/nat3/src/Makefile.in
@@ -5,7 +5,7 @@ CFLAGS =  @CFLAGS@ @CPPFLAGS@ @DEFS@
 LDFLAGS = @LDFLAGS@ -lpthread @LIBS@
 DEFINES = -D_POSIX_THREADS @DEFS@
 DNS = dns_a.o dns_compression.o dns_header.o dns_name.o dns_nat3.o dns_packet.o dns_query.o dns_rr.o
-OBJS = $(DNS) tun_mgr.o tun_device.o tun_queue.o resolver.o tun_in_ent.o tun_out_ent.o tun_ent.o mutex_helper.o config_file.o @LIBOBJS@
+OBJS = $(DNS) tun_mgr.o tun_device.o tun_queue.o resolver.o tun_in_ent.o tun_out_ent.o tun_ent.o mutex_helper.o config_file.o functions.o pcap_arp_handler.o linux_tun_mgr.o @LIBOBJS@
 
 TEST_DRIVERS = test_tun_mgr 
 PROG = nat3d nat3ping
@@ -24,10 +24,10 @@ CXXFLAGS += $(CFLAGS)
 all: $(PROG) $(TEST_DRIVERS)
 
 $(PROG): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(DEFINES) $(LDFLAGS) -o ../bin/$@ $@.cc $(OBJS)
+	$(CXX) $(CXXFLAGS) $(DEFINES)  -o ../bin/$@ $@.cc $(OBJS) $(LDFLAGS)
 
 $(TEST_DRIVERS): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(DEFINES) $(LDFLAGS) -o ../bin/$@ $@.cc $(OBJS)
+	$(CXX) $(CXXFLAGS) $(DEFINES)  -o ../bin/$@ $@.cc $(OBJS) $(LDFLAGS)
 
 clean:
 	rm -f $(PROG) $(OBJS)
