Major changes made:
1. Separate log file option added to config file
2. Logging now goes to a separate file for best performance.
3. What should be printf, what should be TUN_MGR_DEBUF print, what should be log file print is standard now

--- a/branch/tdsmapper/nat3/Makefile
+++ b/branch/tdsmapper/nat3/Makefile
@@ -3,11 +3,11 @@ PROG = nat3d
 CC =    gcc
 CXX =    g++
 CFLAGS =  -g -O2  -DHAVE_CONFIG_H
-LDFLAGS =  
+LDFLAGS =  -lpcap 
 DEFINES = -DHAVE_CONFIG_H
 
 CFLAGS += -Wall -Werror -D_REENTRANT
-CFLAGS += -g
+CFLAGS += -DDEBUG -g
 
 CXXFLAGS += $(CFLAGS)
 
